--- a/front page.html
+++ b/front page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!doctype html>
   <html lang="en">
@@ -9,8 +10,11 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   <link rel="stylesheet" type="text/css" href="css/custom.css">
+   <link rel="stylesheet" type="text/css" href="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/css/custom.css">
+
+   <title>Sonemic</title>
 </head>
+
 <body>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -18,6 +22,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+  <!-- navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
     <img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/icon.png" width="30" height="30" alt="">&nbsp;Sonemic
@@ -25,8 +30,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-  <!-- navigation -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
 
@@ -36,6 +39,14 @@
 
         <li class="nav-item">
           <a class="nav-link" href="#">Add</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Search</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Inbox</a>
         </li>
 
         <li class="nav-item dropdown">
@@ -52,5 +63,58 @@
       </ul>
     </div>
   </nav>
+
+  <div class="container" id="main content">
+    <div class="row">
+      <div class="col-7" id="left-module">
+        Heaven to a Tortured mind</br>
+        Yves Tumor</br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. Aliquam erat volutpat. Morbi porttitor sodales porta. Aenean fringilla purus non sem facilisis auctor. Pellentesque accumsan ac tellus mollis volutpat. Vivamus accumsan vehicula gravida. Sed at hendrerit magna, non finibus libero. Aenean convallis fermentum diam nec dictum. Praesent quis bibendum justo. Sed velit neque, mattis in mi sit amet, ultrices dapibus leo.</p>
+      </div>
+      <div class="col-5" id="right-module">
+
+        <div class="col" id="recent-module">
+        <h2>Recent</h2>
+        <h3>Max & Match</h3>
+        Loona / Odd Eye Circle</br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. Aliquam erat volutpat. Morbi porttitor sodales porta. Aenean fringilla purus non sem facilisis auctor. Pellentesque accumsan ac tellus mollis volutpat. Vivamus accumsan vehicula gravida. Sed at hendrerit magna, non finibus libero. Aenean convallis fermentum diam nec dictum. Praesent quis bibendum justo. Sed velit neque, mattis in mi sit amet, ultrices dapibus leo. </p>
+        </div>
+
+        <div class="col" id="newreleases-module">
+          <h2>New Releases</h2>
+
+            <div class="col-6" id="newrelease-1">
+            <h3>As If It's Your Last</h3>
+            Blackpink</br>
+            <p>June 22</p>
+            </div>
+
+            <div class="col-6" id="newrelease-2">
+            <h3>Femme Fatale</h3>
+            Britney Spears</br>
+            <p>March 25</p>
+            </div>
+
+
+
+            <div class="col-6" id="newrelease-3">
+            <h3>Triangle</h3>
+            Perfume</br>
+            <p>July 8</p>
+            </div>
+
+            <div class="col-6" id="newrelease-4">
+            <h3>'The Reve Festival' Finale</h3>
+            Red Velvet</br>
+            <p>December 23</p>
+            </div>
+          </div>
+          </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
