--- a/front page.html
+++ b/front page.html
@@ -23,7 +23,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <!-- navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light text text-right">
     <a class="navbar-brand" href="#">
     <img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/icon.png" width="30" height="30" alt="">&nbsp;Sonemic
     </a>
@@ -31,7 +31,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="nav navbar-nav">
 
         <li class="nav-item">
           <a class="nav-link" href="#">Discover</a>
@@ -44,7 +44,8 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Search</a>
         </li>
-
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
           <a class="nav-link" href="#">Inbox</a>
         </li>
@@ -58,6 +59,7 @@
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
+      </ul>
           </div>
         </li>
       </ul>
@@ -74,36 +76,37 @@
       <div class="col-5" id="right-module">
 
         <div class="col" id="recent-module">
+
+        <div class="col" id="recent-info">
         <h2>Recent</h2>
         <h3>Max & Match</h3>
         Loona / Odd Eye Circle</br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. Aliquam erat volutpat. Morbi porttitor sodales porta. Aenean fringilla purus non sem facilisis auctor. Pellentesque accumsan ac tellus mollis volutpat. Vivamus accumsan vehicula gravida. Sed at hendrerit magna, non finibus libero. Aenean convallis fermentum diam nec dictum. Praesent quis bibendum justo. Sed velit neque, mattis in mi sit amet, ultrices dapibus leo. </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. </p>
         </div>
+      </div>
 
         <div class="col" id="newreleases-module">
           <h2>New Releases</h2>
 
-            <div class="col-6" id="newrelease-1">
+            <div class="col" id="newrelease-1">
             <h3>As If It's Your Last</h3>
             Blackpink</br>
             <p>June 22</p>
             </div>
 
-            <div class="col-6" id="newrelease-2">
+            <div class="col" id="newrelease-2">
             <h3>Femme Fatale</h3>
             Britney Spears</br>
             <p>March 25</p>
             </div>
 
-
-
-            <div class="col-6" id="newrelease-3">
+            <div class="col" id="newrelease-3">
             <h3>Triangle</h3>
             Perfume</br>
             <p>July 8</p>
             </div>
 
-            <div class="col-6" id="newrelease-4">
+            <div class="col" id="newrelease-4">
             <h3>'The Reve Festival' Finale</h3>
             Red Velvet</br>
             <p>December 23</p>
@@ -111,10 +114,5 @@
           </div>
           </div>
           </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
 </body>
 </html>
