--- a/front page.html
+++ b/front page.html
@@ -68,27 +68,33 @@
 
   <div class="container" id="main content">
     <div class="row">
-      <div class="col-7" id="left-module">
+      <div class="col-6" id="left-module">
         Heaven to a Tortured mind</br>
         Yves Tumor</br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. Aliquam erat volutpat. Morbi porttitor sodales porta. Aenean fringilla purus non sem facilisis auctor. Pellentesque accumsan ac tellus mollis volutpat. Vivamus accumsan vehicula gravida. Sed at hendrerit magna, non finibus libero. Aenean convallis fermentum diam nec dictum. Praesent quis bibendum justo. Sed velit neque, mattis in mi sit amet, ultrices dapibus leo.</p>
       </div>
-      <div class="col-5" id="right-module">
 
-        <div class="col" id="recent-module">
+      <div class="col-6" id="right-module">
+        <h2>Recent</h2>
+        <div class="col d-flex" id="recent-module">
+
+        <div class="col-6" id="recent-img">
+          <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left" alt="Loona">
+        </div>
 
         <div class="col" id="recent-info">
-        <h2>Recent</h2>
         <h3>Max & Match</h3>
         Loona / Odd Eye Circle</br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. </p>
         </div>
+
       </div>
-
-        <div class="col" id="newreleases-module">
+        </br>
           <h2>New Releases</h2>
-
+        <div class="col" id="newreleases-module">
+            <div class="row"> <!-- top -->
             <div class="col" id="newrelease-1">
+            <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="float-left" alt="Loona">
             <h3>As If It's Your Last</h3>
             Blackpink</br>
             <p>June 22</p>
@@ -99,7 +105,9 @@
             Britney Spears</br>
             <p>March 25</p>
             </div>
+            </div>
 
+            <div class="row">  <!-- bottom -->
             <div class="col" id="newrelease-3">
             <h3>Triangle</h3>
             Perfume</br>
@@ -110,6 +118,7 @@
             <h3>'The Reve Festival' Finale</h3>
             Red Velvet</br>
             <p>December 23</p>
+            </div>
             </div>
           </div>
           </div>
