--- a/front page.html
+++ b/front page.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   <link rel="stylesheet" type="text/css" href="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/css/custom.css">
+  <link rel="stylesheet" type="text/css" href="">
 
    <title>Sonemic</title>
 </head>
@@ -23,7 +23,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <!-- navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light text text-right">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light text text-right sticky-top">
     <a class="navbar-brand" href="#">
     <img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/icon.png" width="30" height="30" alt="">&nbsp;Sonemic
     </a>
@@ -76,9 +76,9 @@
 
       <div class="col-6" id="right-module">
         <h2>Recent</h2>
-        <div class="col d-flex" id="recent-module">
+        <div class="col-lg d-flex justify-content-around" id="recent-module">
 
-        <div class="col-6" id="recent-img">
+        <div class="col-lg-6" id="recent-img">
           <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left" alt="Loona">
         </div>
 
@@ -94,7 +94,7 @@
         <div class="col" id="newreleases-module">
             <div class="row"> <!-- top -->
             <div class="col" id="newrelease-1">
-            <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="float-left" alt="Loona">
+            <img src="https://i.postimg.cc/Y04rhWc3/BLACK-PINK-As-If-It-s-Your-Last.jpg" class="float-left" alt="Loona">
             <h3>As If It's Your Last</h3>
             Blackpink</br>
             <p>June 22</p>
