--- a/front page.html
+++ b/front page.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="">
+  <link rel="stylesheet" type="text/css" href="css/custom.css">
 
    <title>Sonemic</title>
 </head>
@@ -78,7 +78,7 @@
         <h2>Recent</h2>
         <div class="col-lg d-flex justify-content-around" id="recent-module">
 
-        <div class="col-lg-6" id="recent-img">
+        <div class="col-lg-5" id="recent-img">
           <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left" alt="Loona">
         </div>
 
@@ -94,7 +94,7 @@
         <div class="col" id="newreleases-module">
             <div class="row"> <!-- top -->
             <div class="col" id="newrelease-1">
-            <img src="https://i.postimg.cc/Y04rhWc3/BLACK-PINK-As-If-It-s-Your-Last.jpg" class="float-left" alt="Loona">
+            <img src="https://i.postimg.cc/Y04rhWc3/BLACK-PINK-As-If-It-s-Your-Last.jpg" class="img-fluid float-left" alt="Loona">
             <h3>As If It's Your Last</h3>
             Blackpink</br>
             <p>June 22</p>
