--- a/front page.html
+++ b/front page.html
@@ -23,7 +23,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <!-- navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light text text-right sticky-top">
+  <nav class="navbar navbar-expand-lg text text-right sticky-top">
     <a class="navbar-brand" href="#">
     <img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/icon.png" width="30" height="30" alt="">&nbsp;Sonemic
     </a>
@@ -40,25 +40,28 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Add</a>
         </li>
+    </ul>
+    <div class="navbar-collapse">
+    <ul class="navbar-nav ml-auto">
+
+      <li class="nav-item">
+        <a class="nav-link" href="#"><img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/search.svg" width="25" height="25" alt="Inbox"></a>
+      </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Search</a>
-        </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Inbox</a>
+          <a class="nav-link" href="#"><img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/envelope.svg" width="25" height="25" alt="Inbox"></a>
         </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+          <img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/tumblr_8cc2ed2bbc9038cab63189291acfb973_4f10d919_400.png" width="30" height="30" alt="Profile Settings">
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#"><b>~username</b></a>
+            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#">Upgrade</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">Log Out</a>
       </ul>
           </div>
         </li>
@@ -70,13 +73,13 @@
     <div class="row">
       <div class="col-6" id="left-module">
         Heaven to a Tortured mind</br>
-        Yves Tumor</br>
+        Yves Tumor</span></br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. Aliquam erat volutpat. Morbi porttitor sodales porta. Aenean fringilla purus non sem facilisis auctor. Pellentesque accumsan ac tellus mollis volutpat. Vivamus accumsan vehicula gravida. Sed at hendrerit magna, non finibus libero. Aenean convallis fermentum diam nec dictum. Praesent quis bibendum justo. Sed velit neque, mattis in mi sit amet, ultrices dapibus leo.</p>
       </div>
 
       <div class="col-6" id="right-module">
         <h2>Recent</h2>
-        <div class="col-lg d-flex justify-content-around" id="recent-module">
+        <div class="col-lg d-flex justify-content-around align-middle" id="recent-module">
 
         <div class="col-lg-5" id="recent-img">
           <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left" alt="Loona">
