formatted main releases

--- a/front page.html
+++ b/front page.html
@@ -71,13 +71,32 @@
 
   <div class="container" id="main content">
     <div class="row">
-      <div class="col-6" id="left-module">
-        Heaven to a Tortured mind</br>
-        Yves Tumor</span></br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. Aliquam erat volutpat. Morbi porttitor sodales porta. Aenean fringilla purus non sem facilisis auctor. Pellentesque accumsan ac tellus mollis volutpat. Vivamus accumsan vehicula gravida. Sed at hendrerit magna, non finibus libero. Aenean convallis fermentum diam nec dictum. Praesent quis bibendum justo. Sed velit neque, mattis in mi sit amet, ultrices dapibus leo.</p>
+      <div class="col" id="left-module">
+        <div class="row" id="main-review">
+          <div class="col-lg-5 justify-content-center align-self-center px-0" id="mainreview-img">
+            <img src="https://i.postimg.cc/15YWh5zh/music200310-yvestumor-kerosene-02.jpg" class="img-fluid float-left" alt="Loona">
+          </div>
+
+          <div class="col justify-content-center align-self-center flex-grow" id="mainreview-info">
+            <h3>Heaven to a Tortured Mind</h3>
+            Yves Tumor</br>
+            <p>Yves Tumor’s astonishing new album finds Sean Bowie transcending his murky electronic roots in favour of huge, apocalyptic art-rock songs and bruised, soul-flecked ballads.</p>
+          </div>
+      </div>
+      <div class="row justify-content-center align-self-center" id="secondary-review">
+        <div class="col-lg-5 justify-content-center align-self-center px-0" id="secondaryreview-img">
+          <img src="https://i.postimg.cc/Tdjv8SW-2/strokes-new-abnormal.jpg" class="img-fluid float-right" alt="Loona">
+        </div>
+
+        <div class="col justify-content-center align-self-center" id="secondaryreview-text">
+          <h3>The New Abnormal</h3>
+          The Strokes</br>
+          <p>Not only is The New Abnormal my favorite album so far this year, it's my favorite Strokes album and one of the most flawlessly consistent rock albums I've heard in ages.</p>
+        </div>
+    </div>
       </div>
 
-      <div class="col-6 flex-grow" id="right-module">
+      <div class="col-5" id="right-module">
 
         <h2>Recent</h2>
         <div class="col-lg d-flex justify-content-around align-middle" id="recent-module">
@@ -89,12 +108,11 @@
           <div class="col justify-content-center align-self-center" id="recent-info">
             <h3>Max & Match</h3>
             Loona / Odd Eye Circle</br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisl ligula, rutrum eget velit ut, aliquam aliquam lorem. Ut ut erat tellus. Proin ultrices efficitur libero non blandit. Sed lobortis nisi at velit tincidunt faucibus. </p>
+            <p>In Mix and Match, LOONA introduces their more sensual, R&B inspired side, although their euphoric, sugary melodies are still very much present.</p>
           </div>
 
       </div>
-        </br>
-          <h2>New Releases</h2>
+        <h2>New Releases</h2>
         <div class="col flex-grow" id="newreleases-module">
             <div class="row flex-grow" id="new"> <!-- top -->
               <div class="new-release col d-flex justify-content-around align-middle">
