--- a/front page.html
+++ b/front page.html
@@ -71,29 +71,42 @@
 
   <div class="container" id="main content">
     <div class="row">
-      <div class="col" id="left-module">
-        <div class="row" id="main-review">
-          <div class="col-lg-5 justify-content-center align-self-center px-0" id="mainreview-img">
-            <img src="https://i.postimg.cc/15YWh5zh/music200310-yvestumor-kerosene-02.jpg" class="img-fluid float-left" alt="Loona">
+      <div class="col p-1" id="left-module">
+        <div class="row p-2" id="main-review">
+          <div class="col-lg-5 justify-content-center align-self-center" id="mainreview-img">
+            <img src="https://i.postimg.cc/15YWh5zh/music200310-yvestumor-kerosene-02.jpg" class="img-fluid float-left" alt="Heaven to a Tortured Mind">
           </div>
 
           <div class="col justify-content-center align-self-center flex-grow" id="mainreview-info">
             <h3>Heaven to a Tortured Mind</h3>
-            Yves Tumor</br>
+            <span class="artist-name">Yves Tumor</span></br>
             <p>Yves Tumor’s astonishing new album finds Sean Bowie transcending his murky electronic roots in favour of huge, apocalyptic art-rock songs and bruised, soul-flecked ballads.</p>
           </div>
       </div>
-      <div class="row justify-content-center align-self-center" id="secondary-review">
-        <div class="col-lg-5 justify-content-center align-self-center px-0" id="secondaryreview-img">
+    <div class="row justify-content-center align-self-center p-2" id="secondary-review">
+        <div class="col-lg-5 justify-content-center align-self-center" id="secondaryreview-img">
           <img src="https://i.postimg.cc/Tdjv8SW-2/strokes-new-abnormal.jpg" class="img-fluid float-right" alt="Loona">
         </div>
 
         <div class="col justify-content-center align-self-center" id="secondaryreview-text">
           <h3>The New Abnormal</h3>
-          The Strokes</br>
+          <span class="artist-name">The Strokes</span></br>
           <p>Not only is The New Abnormal my favorite album so far this year, it's my favorite Strokes album and one of the most flawlessly consistent rock albums I've heard in ages.</p>
         </div>
     </div>
+
+    <div class="row justify-content-center align-self-center p-2" id="secondary-review">
+        <div class="col-lg-5 justify-content-center align-self-center" id="secondaryreview-img">
+          <img src="https://i.postimg.cc/Hkxy3dLk/2715040.jpg" class="img-fluid float-right" alt="Loona">
+        </div>
+
+        <div class="col justify-content-center align-self-center" id="secondaryreview-text">
+          <h3>I Want to Be There</h3>
+          <span class="artist-name">Sadness</span></br>
+          <p>I Want to Be There in its noisy chaos manages to provide many super memorable standout moments, like the vibraphone melodies on You Dance Like the June Sky, or an explosion of these sudden clean vocal harmonies on I Want to Be with You.</p>
+        </div>
+    </div>
+
       </div>
 
       <div class="col-5" id="right-module">
@@ -107,15 +120,15 @@
 
           <div class="col justify-content-center align-self-center" id="recent-info">
             <h3>Max & Match</h3>
-            Loona / Odd Eye Circle</br>
+            <span class="artist-name">Loona / Odd Eye Circle</span>
             <p>In Mix and Match, LOONA introduces their more sensual, R&B inspired side, although their euphoric, sugary melodies are still very much present.</p>
           </div>
 
       </div>
         <h2>New Releases</h2>
-        <div class="col flex-grow" id="newreleases-module">
-            <div class="row flex-grow" id="new"> <!-- top -->
-              <div class="new-release col d-flex justify-content-around align-middle">
+        <div class="col p-3" id="newreleases-module">
+            <div class="row" id="new"> <!-- top -->
+              <div class="new-release col d-flex justify-content-around align-middle flex-grow">
 
                 <div class="col-6 justify-content-center align-self-center px-0">
                   <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left d-flex" alt="Loona">
@@ -123,8 +136,8 @@
 
                 <div class="col justify-content-center" id="newrelease-info">
                   <h3>Femme Fatale</h3>
-                  Britney Spears</br>
-                  <p>March 25</p>
+                  <span class="artist-name">Britney Spears</span></br>
+                  <span class="release-date">March 25</span>
                 </div>
             </div>
 
@@ -136,15 +149,15 @@
 
               <div class="col justify-content-center" id="newrelease-info">
                 <h3>Femme Fatale</h3>
-                Britney Spears</br>
-                <p>March 25</p>
+                <span class="artist-name">Britney Spears</span></br>
+                <span class="release-date">March 25</span>
               </div>
           </div>
           <!-- Force next columns to break to new line -->
           <div class="w-100"></div>
 
             <!-- bottom -->
-              <div class="new-release col d-flex justify-content-around align-middle">
+              <div class="new-release col d-flex justify-content-around align-middle flex-grow">
 
                 <div class="col-6 justify-content-center align-self-center px-0">
                   <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left d-flex" alt="Loona">
@@ -152,21 +165,21 @@
 
                 <div class="col justify-content-center" id="newrelease-info">
                   <h3>Femme Fatale</h3>
-                  Britney Spears</br>
-                  <p>March 25</p>
+                  <span class="artist-name">Britney Spears</span></br>
+                  <span class="release-date">March 25</span>
                 </div>
             </div>
 
-            <div class="new-release col d-flex justify-content-around align-middle">
+            <div class="new-release col d-flex justify-content-around align-middle flex-grow">
 
-              <div class="col-6 justify-content-center align-self-center px-0">
+              <div class="col-6 align-self-center px-0">
                 <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left d-flex" alt="Loona">
               </div>
 
               <div class="col justify-content-center" id="newrelease-info">
                 <h3>Femme Fatale</h3>
-                Britney Spears</br>
-                <p>March 25</p>
+                <span class="artist-name">Britney Spears</span></br>
+                <span class="release-date">March 25</span></p>
               </div>
           </div>
             </div>
