top padding new releases

--- a/front page.html
+++ b/front page.html
@@ -69,9 +69,9 @@
     </div>
   </nav>
 
-  <div class="container" id="main content">
+  <div class="container p-2" id="main content">
     <div class="row">
-      <div class="col p-1" id="left-module">
+      <div class="col p-2" id="left-module">
         <div class="row p-2" id="main-review">
           <div class="col-lg-5 justify-content-center align-self-center" id="mainreview-img">
             <img src="https://i.postimg.cc/15YWh5zh/music200310-yvestumor-kerosene-02.jpg" class="img-fluid float-left" alt="Heaven to a Tortured Mind">
@@ -121,12 +121,13 @@
           <div class="col justify-content-center align-self-center" id="recent-info">
             <h3>Max & Match</h3>
             <span class="artist-name">Loona / Odd Eye Circle</span>
-            <p>In Mix and Match, LOONA introduces their more sensual, R&B inspired side, although their euphoric, sugary melodies are still very much present.</p>
+            <p>In Mix and Match, LOONA introduces their more sensual, R&B inspired side...</p>
           </div>
 
       </div>
+      <div class="pt-4">
         <h2>New Releases</h2>
-        <div class="col p-3" id="newreleases-module">
+        <div class="col" id="newreleases-module">
             <div class="row" id="new"> <!-- top -->
               <div class="new-release col d-flex justify-content-around align-middle flex-grow">
 
@@ -183,6 +184,7 @@
               </div>
           </div>
             </div>
+          </div>
           </div>
           </div>
           </div>
