--- a/front page.html
+++ b/front page.html
@@ -83,12 +83,12 @@
             <p>Yves Tumor’s astonishing new album finds Sean Bowie transcending his murky electronic roots in favour of huge, apocalyptic art-rock songs and bruised, soul-flecked ballads.</p>
           </div>
       </div>
-    <div class="row justify-content-center align-self-center p-2" id="secondary-review">
+    <div class="row justify-content-center p-2" id="secondary-review">
         <div class="col-lg-5 justify-content-center align-self-center" id="secondaryreview-img">
           <img src="https://i.postimg.cc/Tdjv8SW-2/strokes-new-abnormal.jpg" class="img-fluid float-right" alt="Loona">
         </div>
 
-        <div class="col justify-content-center align-self-center" id="secondaryreview-text">
+        <div class="col" id="secondaryreview-text">
           <h3>The New Abnormal</h3>
           <span class="artist-name">The Strokes</span></br>
           <p>Not only is The New Abnormal my favorite album so far this year, it's my favorite Strokes album and one of the most flawlessly consistent rock albums I've heard in ages.</p>
@@ -100,7 +100,7 @@
           <img src="https://i.postimg.cc/Hkxy3dLk/2715040.jpg" class="img-fluid float-right" alt="Loona">
         </div>
 
-        <div class="col justify-content-center align-self-center" id="secondaryreview-text">
+        <div class="col" id="secondaryreview-text">
           <h3>I Want to Be There</h3>
           <span class="artist-name">Sadness</span></br>
           <p>I Want to Be There in its noisy chaos manages to provide many super memorable standout moments, like the vibraphone melodies on You Dance Like the June Sky, or an explosion of these sudden clean vocal harmonies on I Want to Be with You.</p>
@@ -112,9 +112,9 @@
       <div class="col-5" id="right-module">
 
         <h2>Recent</h2>
-        <div class="col-lg d-flex justify-content-around align-middle" id="recent-module">
+        <div class="col-lg d-flex justify-content-around align-middle pb-3" id="recent-module">
 
-          <div class="col-lg-5 justify-content-center align-self-center px-0" id="recent-img">
+          <div class="col-lg-5 align-self-center px-0" id="recent-img">
             <img src="https://i.postimg.cc/tTcS7KyL/5cf2b2c337188de6c13836634107ee327182bced.jpg" class="img-fluid float-left" alt="Loona">
           </div>
 
