--- a/front page.html
+++ b/front page.html
@@ -25,7 +25,7 @@
   <!-- navigation -->
   <nav class="navbar navbar-expand-lg text text-right sticky-top">
     <a class="navbar-brand pr-2" href="#">
-    <img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/icon.png" width="30" height="30" alt="">&nbsp;Sonemic
+    <img src="https://i.postimg.cc/9FszyWVj/icon.png" width="30" height="30" alt="">&nbsp;Sonemic
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,16 +45,16 @@
     <ul class="navbar-nav ml-auto">
 
       <li class="nav-item px-2">
-        <a class="nav-link" href="#"><img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/search.svg" width="20" height="20" alt="Search"></a>
+        <a class="nav-link" href="#"><img src="https://i.postimg.cc/VvdnLD99/search.png" width="20" height="20" alt="Search"></a>
       </li>
 
         <li class="nav-item px-2">
-          <a class="nav-link" href="#"><img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/envelope.svg" width="20" height="20" alt="Inbox"></a>
+          <a class="nav-link" href="#"><img src="https://i.postimg.cc/zG0KmygY/envelope.png" width="20" height="20" alt="Inbox"></a>
         </li>
 
         <li class="nav-item dropdown pl-2">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="file:///C:/Users/Usuario/Documents/GitHub/RYM-redesign/images/tumblr_8cc2ed2bbc9038cab63189291acfb973_4f10d919_400.png" width="30" height="30" alt="Profile Settings">
+          <img src="https://i.postimg.cc/YS5Jxs00/tumblr-8cc2ed2bbc9038cab63189291acfb973-4f10d919-400.png" width="30" height="30" alt="Profile Settings">
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#"><b>~username</b></a>
